# x-ai

./: README.md
ai-code-example/: .gitignore  go.mod  go.sum
ai-code-example/eino/chat/: generate.go  ollama.go  openai.go  stream.go  template_test.go
ai-code-example/eino/eino_assistant/: .env  .gitignore  README.md  go.mod  go.sum
ai-code-example/eino/todoagent/: logs.go  main.go
ai-code-example/langchaingo/: READEME.md
ai-code-example/langchaingo/quickstart/: main.go
math/: README.md  微积分-单变量.md  微积分-多变量.md  扩展_用Python学透线性代数和微积分.md  概率论.md  线性代数.md  统计学.md
python-base/: .gitignore
python-base/01-python-language/: .gitignore  01_variables_datatypes.py  02_operators.py  03_control_structures.py  04_functions.py  05_data_structures.py  06_exception_handling.py  07_modules_packages.py  08_object_oriented.py  09_third_party_libraries.py  10_python_projects.py  11_type_hints.py  12_file_operations.py  13_network_programming.py  14_async_programming.py  15_multithreading.py
python-base/01-python-language/network_demo/: __init__.py  applications.py  http_client.py  http_server.py  tcp_demo.py  udp_demo.py  websocket_demo.py
python-base/01-python-language/oop_demo/: __init__.py  advanced_classes.py  basic_classes.py  magic_methods_demo.py
python-base/02-python-frame/fastapi/: README.md  main.py  pyproject.toml  test.db
python-base/02-python-frame/fastapi/app/: __init__.py  crud.py  database.py  models.py  routes.py  schemas.py
pytorch/: 01-基础.md  02-搭建.md  03-常用数学算法.md  03-张量和常用算法.md  README.md
tensorflow-code/: README.md
yolo/base/: 01-yolo.md
(+254 files in other folders)
